# GGTutorial

./: settings.gradle.kts
app/: build.gradle.kts
app/sampledata/: collection.txt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/main/: test-lib.cpp  tutorial-lib.cpp
app/src/main/cpp/step/agg/: StepAgg1.cpp  StepAgg2.cpp  StepAgg3.cpp  StepAgg4.cpp  StepAgg5.cpp  StepAgg6.cpp  StepAgg7.cpp
app/src/main/cpp/step/basic/: StepBasic1.cpp  StepBasic2.cpp  StepBasic3.cpp  StepBasic4.cpp  StepBasic5.cpp  StepBasic6.cpp  StepBasic7.cpp  StepBasic8.cpp
app/src/main/cpp/step/practical/: StepPractical1.cpp  StepPractical2.cpp
app/src/main/cpp/test/: test.h
app/src/main/cpp/util/: log.h
app/src/main/res/drawable/: ic_launcher_foreground.xml  progress_bar_hp.xml
app/src/main/res/layout/: activity_main.xml  fragment_main.xml  fragment_step_agg1.xml  fragment_step_agg2.xml  fragment_step_agg3.xml  fragment_step_agg4.xml  fragment_step_agg5.xml  fragment_step_agg6.xml  fragment_step_agg7.xml  fragment_step_basic1.xml  fragment_step_basic2.xml  fragment_step_basic3.xml  fragment_step_basic4.xml  fragment_step_basic5.xml  fragment_step_basic6.xml  fragment_step_basic7.xml  fragment_step_basic8.xml  fragment_step_practical1.xml  fragment_step_practical2.xml  item_rv_step_detail.xml  item_rv_step_title.xml
app/src/main/res/navigation/: nav_step.xml
app/src/main/res/values/: strings.xml  styles.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+25 files in other folders)
